Refactored IMobileUtils. Removed driver casting (Android and IOS) and using interface Investigate is it nesessary to check is driver supports such type of interface